Fix smaller credit text in header/logo
Don't be an attention whore! The credits shouldn't take up too much
space/draw too much attention. This fix will do for now.

--- a/apk.css
+++ b/apk.css
@@ -21,7 +21,7 @@ h1 {
 	font-family: Montserrat, "Arial black";
 }
 h1 span {
-	font-size: 50%;
+	font-size: 40%;
 	text-transform: uppercase;
 }
 
